@@ -21,6 +21,7 @@ documents those changes that are of interest to users and administrators.
  -- acct_gather_filesystem/lustre - fix stats gathering.
  -- Enforce documented default usage start and end times when querying jobs from
     the database.
+ -- Fix issues when querying running jobs from the database.
 
 * Changes in Slurm 18.08.5-2
 ============================
